# Web-Traffic-Monitoring-Platform

./: README.html  README.md  commands.txt  docker-compose.yml  pyproject.toml  requirements.txt
api/src/: main.py
api/tests/: test_api.py
data-generator/src/: log_generator.py
data-generator/tests/: test_log_generator.py
data/kafka1/data/: meta.properties  recovery-point-offset-checkpoint  replication-offset-checkpoint
data/spark-jobs/output/: .part-00000-102a8a9f-6674-42c0-b5e5-5a53d9adbffa-c000.snappy.parquet.crc  .part-00003-2f330ad1-9f68-47c1-9c3d-151c23fd2943-c000.snappy.parquet.crc  .part-00040-ea4ee300-397b-45dc-a543-efdc8929b740-c000.snappy.parquet.crc  .part-00104-100f914d-19ab-410f-ab7f-2eacce09a266-c000.snappy.parquet.crc  .part-00133-68f1ab3d-0528-416e-a9f9-d16125e9a016-c000.snappy.parquet.crc  .part-00155-bdb85e2a-abe6-41a3-bcd3-bea06cde2f3c-c000.snappy.parquet.crc  .part-00173-d30ffad6-f818-43f4-8095-b159b7dd8153-c000.snappy.parquet.crc  part-00000-ffc0708e-7e5e-4979-91c0-135a7cb2ca83-c000.snappy.parquet  part-00003-2f330ad1-9f68-47c1-9c3d-151c23fd2943-c000.snappy.parquet  part-00040-ea4ee300-397b-45dc-a543-efdc8929b740-c000.snappy.parquet  part-00104-100f914d-19ab-410f-ab7f-2eacce09a266-c000.snappy.parquet  part-00133-68f1ab3d-0528-416e-a9f9-d16125e9a016-c000.snappy.parquet  (+2 more)
jupyter/: read_parquet.ipynb
ml/src/: anomaly_detector.py
ml/tests/: test_anomaly_detector.py
spark-jobs/src/: log_processor.py
spark-jobs/tests/: test_log_processor.py
terraform/: main.tf  variables.tf
terraform/modules/ecs/: main.tf  variables.tf
(+203 files in other folders)
