[tool.poetry]
name = "projeto01"
version = "0.1.0"
description = ""
authors = ["lucas-placido <lucas.cplacido@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
pandas = "2.0.3"
numpy = "1.24.3"
pyspark = "3.4.1"
fastapi = "0.103.1"
uvicorn = "0.23.2"
python-multipart = "0.0.6"
kafka-python = "2.0.2"
confluent-kafka = "2.2.0"
scikit-learn = "1.3.0"
joblib = "1.3.1"
boto3 = "1.28.38"
awscli = "1.29.38"
python-dotenv = "1.0.0"
requests = "2.31.0"
pytest = "7.4.2"
black = "23.7.0"
flake8 = "6.1.0"
apache-airflow = "2.7.1"
apache-airflow-providers-amazon = "8.4.0"
apache-airflow-providers-apache-spark = "4.1.3"
mkdocs = "1.5.2"
mkdocs-material = "9.2.5"
ipykernel = "^6.29.5"
pyarrow = "^19.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
